# smartiris

./: Makefile  README.md  bincoms.cpp  bincoms.h  pyproject.toml  smartiris.ino
3D/: box.FCStd
bincoms/: __init__.py
smartiris/: __init__.py  clock_calibration.py
test/: reliability_test.py  shutter_study_conclusion.py  timing_accuracy_test.py
